--- a/resources/Drivers/phyDriver/Makefile
+++ b/resources/Drivers/phyDriver/Makefile
@@ -1,9 +1,21 @@
-obj-m += phyDriver.o
+obj-m := phyDriver.o
+ARCH=arm
+CROSS_COMPILE=arm-linux-gnueabihf-
+KERN_DIR=../../KernelSource_4_19v/
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERN_DIR) M=$(PWD) modules
 
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERN_DIR) M=$(PWD) clean
+
+help:
+	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERN_DIR) M=$(PWD) help
+
+host:
+	make -C /lib/modules/$(shell uname -r)/build  M=$(PWD) modules
+
+	
+	
 	
 	
