--- a/resources/KernelSource_4_19v/arch/arm/configs/kush_zinc_defconfig
+++ b/resources/KernelSource_4_19v/arch/arm/configs/kush_zinc_defconfig
@@ -238,5 +238,10 @@ CONFIG_FONT_8x8=y
 CONFIG_FONT_8x16=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
+CONFIG_DEBUG_KOBJECT=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_FTRACE is not set
+CONFIG_KGDB=y
+CONFIG_STRICT_DEVMEM=y
+CONFIG_IO_STRICT_DEVMEM=y
+CONFIG_ARM_PTDUMP_DEBUGFS=y
